--- a/style.css
+++ b/style.css
@@ -348,9 +348,11 @@ h1 span {
 }
 
 #services .content {
-  display: grid;
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-  row-gap: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
 }
 
 .service__item {
@@ -358,6 +360,8 @@ h1 span {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 324px;
+  min-width: 300px;
   padding: 3rem 2rem;
   border-radius: 1rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
@@ -562,20 +566,6 @@ footer .content section {
     column-gap: 1.5rem;
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-
-  /**** Service ****/
-  #services .content {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-    column-gap: 1.5rem;
-    grid-template-rows: none;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .service__item {
-    max-width: 300px;
-  }
 }
 
 @media screen and (min-width:968px) {
@@ -697,11 +687,6 @@ footer .content section {
 
   #missions .mission__second {
     grid-template-columns: 3.5fr 5fr;
-  }
-
-  #services .content {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    column-gap: 1rem;
   }
 
   /*** Service ****/
